--- a/my-first-jss-app/data/routes/mytestjsscomponent/JobList/JobDetail/en.yml
+++ b/my-first-jss-app/data/routes/mytestjsscomponent/JobList/JobDetail/en.yml
@@ -1,11 +1,12 @@
 # Using a Custom Route Type enables adding more field data to the route level.
-template: ExampleCustomRouteType
+# template: JobDetail
 # This is route level field for the MyFirstComponent
 fields:
   # Note that custom route types inherit from the default route type automatically.
   # This is what makes the `pageTitle` field available here, when it's not defined on the custom route type.
-  MainText: Below are the list of open vacancies
-  Description: <p>You can add your extra information here! in the description</p>
+  Title: Sitecore developer
+  Summary: Below is the section for the required skills for the sitecore developer
+  content: <ul><li>C-Sharp</li><li>MVC</li><li>JSS</li><li>Certified</li><li>Azure</li><li>Solr</li><li>Helix</li></ul>
 placeholders:
   jss-main:
   - componentName: MyFirstComponent
