--- a/SitecoreJss93/packages.config
+++ b/SitecoreJss93/packages.config
@@ -6,6 +6,8 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="Sitecore.JavaScriptServices.AppServices" version="14.0.0" targetFramework="net472" />
+  <package id="Sitecore.JavaScriptServices.Configuration" version="14.0.0" targetFramework="net472" />
   <package id="Sitecore.Kernel.NoReferences" version="9.0.180604" targetFramework="net472" developmentDependency="true" />
   <package id="Sitecore.Mvc.NoReferences" version="9.0.180604" targetFramework="net472" developmentDependency="true" />
 </packages>
