Implemented the internal link component

--- a/my-first-jss-app/data/routes/mytestjsscomponent/en.yml
+++ b/my-first-jss-app/data/routes/mytestjsscomponent/en.yml
@@ -12,4 +12,7 @@ placeholders:
   # This is component level field for thhe MyFirstComponent
     fields: 
       somethingNew: This data is coming from the Something new field
-      heading: This is the heading of the MyFirstComponent component 
+      heading: This is the heading of the MyFirstComponent component
+
+  - componentName: Navigation
+
