Created the template and set the navigation link on the job list page

--- a/my-first-jss-app/data/routes/mytestjsscomponent/JobList/JobDetail/en.yml
+++ b/my-first-jss-app/data/routes/mytestjsscomponent/JobList/JobDetail/en.yml
@@ -1,5 +1,5 @@
 # Using a Custom Route Type enables adding more field data to the route level.
-# template: JobDetail
+template: JobDetail
 # This is route level field for the MyFirstComponent
 fields:
   # Note that custom route types inherit from the default route type automatically.
