--- a/my-first-jss-app/data/routes/mytestjsscomponent/JobList/en.yml
+++ b/my-first-jss-app/data/routes/mytestjsscomponent/JobList/en.yml
@@ -1,5 +1,5 @@
 # Using a Custom Route Type enables adding more field data to the route level.
-# template: JobList
+template: JobList
 # This is route level field for the MyFirstComponent
 fields:
   # Note that custom route types inherit from the default route type automatically.
@@ -15,3 +15,4 @@ placeholders:
     fields: 
       somethingNew: This data is coming from the Something new field
       heading: This is the heading of the MyFirstComponent component 
+  - componentName: Navigation
